Cleaned up css and html - followers modal tabs no longer jump up and down when swapping tabs - scrolling within followers modal was not working, now fixed - html for newsfeed card wrapper and followers modal now use bootstrap col and row classes for scalability - search function in followers modal now updates on keypress instead of having to press enter - like icon now has hover function
#chore #fix

--- a/public/stylesheets/followersModal.css
+++ b/public/stylesheets/followersModal.css
@@ -2,15 +2,6 @@
     padding: 2rem;
 }
 
-.search-bar {
-    display: flex;
-}
-
-.search-bar-item-div {
-    margin: 0 5px 10px 5px;
-    width: 28.5rem;
-}
-
 .follower-summary-picture {
     width: 4rem;
     border: 1px solid rgba(0,0,0,.125);
@@ -56,8 +47,9 @@
 }
 
 #followersCardList, #followedByCardList {
-    height: 50%;
-    overflow-y: scroll;
+    overflow: auto;
+    max-height: 25rem;
+    min-height: 5rem;
 }
 
 #no-followers, #no-following {
@@ -66,3 +58,7 @@
     display: table;
 }
 
+#followers-dialog, #following-dialog {
+    align-items: flex-start;
+    margin-top: 10rem;
+}
