--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -167,7 +167,6 @@ pre {
     top: 5rem;
     bottom: 0;
     width: auto;
-    z-index: 10;
 }
 
 .upload-btn-wrapper {
